--- a/Lists.html
+++ b/Lists.html
@@ -12,5 +12,6 @@
       <li>sleep</li>
     </ol>
     <p>This what i got to do.No moer ideas. Hope you are doing good. reply as soon as possible</p>
+    <a href="internal-links.html" title="internal links">Go back</a>
   </body>
 </html>
