--- a/mysite.html
+++ b/mysite.html
@@ -20,7 +20,7 @@
         border:2px solid rgb(255, 115, 0);
         background-color: black;
       }
-      footer{text-align: right;font-size: 30px;}
+      footer{text-align:center;font-size: 30px;}
     </style>
   </head>
   <body>
