--- a/mysite.html
+++ b/mysite.html
@@ -26,7 +26,7 @@
   <body>
     <header>
     
-      <div><img src="vitttaplogo.jpg" width="100px" height="45px"><a href="http://vtop2.vitap.ac.in:8070/vtop/initialProcess">VTOP</a></div>
+      <div><img src="vitttaplogo.jpg" width="100px" height="45px"><a href="http://vtop2.vitap.ac.in:8070/vtop/initialProcess" target="_blank">VTOP</a></div>
       <div><img src="you.jpg" width="100px" height="65px"><a href="https://www.youtube.com/">youtube</a></div>
       <div><img src="unnamed.png" width="100px" height="80px"><a href="https://www.primevideo.com">Prime video</a></div>
     
