--- a/mysite.html
+++ b/mysite.html
@@ -10,7 +10,7 @@
       <div><img src="vitttaplogo.jpg" width="100px" height="45px"><a href="http://vtop2.vitap.ac.in:8070/vtop/initialProcess" target="_blank">VTOP</a></div>
       <div><img src="you.jpg" width="100px" height="65px"><a href="https://www.youtube.com/">youtube</a></div>
       <div><img src="unnamed.png" width="100px" height="80px"><a href="https://www.primevideo.com">Prime video</a></div>
-      <div><img src="coursera.jpg" width="100px" height="80px"><a href="https://www.coursera.org/programs/vitap-on-coursera-8qunk"></a>Coursera</div>
+      <div><img src="coursera.jpg" width="100px" height="80px"><a href="https://www.coursera.org/programs/vitap-on-coursera-8qunk">Coursera</a></div>
   </header>
   <footer><div>BMV &copy; copyright.</div></footer>
   </body>
