--- a/mysite.html
+++ b/mysite.html
@@ -12,6 +12,6 @@
       <div><img src="unnamed.png" width="100px" height="80px"><a href="https://www.primevideo.com">Prime video</a></div>
       <div><img src="coursera.jpg" width="100px" height="80px"><a href="https://www.coursera.org/programs/vitap-on-coursera-8qunk">Coursera</a></div>
   </header>
-  <footer><div>BMV &copy; copyright...</div></footer>
+  <footer><div>BMV &copy; copyright.</div></footer>
   </body>
 </html>
