--- a/mysite.html
+++ b/mysite.html
@@ -3,6 +3,11 @@
   <head>
     <title>My site</title>
     <link rel="stylesheet" href="mysitecss.css">
+    <style>body{
+      background-image: url(car.jpg);
+      background-size: 1560px 840px;
+    }
+    </style>
   </head>
   <body>
     <header>
