--- a/mysite.html
+++ b/mysite.html
@@ -6,6 +6,7 @@
     <style>body{
       background-image: url(car.jpg);
       background-size: 1560px 840px;
+      background-repeat: no-repeat;
     }</style>
   </head>
   <body>
