--- a/mysite.html
+++ b/mysite.html
@@ -17,6 +17,8 @@
       <div><img src="unnamed.png" width="100px" height="80px"><a href="https://www.primevideo.com">Prime video</a></div>
       <div><img src="coursera.jpg" width="100px" height="80px"><a href="https://www.coursera.org/programs/vitap-on-coursera-8qunk">Coursera</a></div>
   </header>
+  
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique doloribus quis molestias non. Consequatur ipsam optio incidunt saepe quae tempora laboriosam qui reiciendis nisi illum sunt cupiditate, perferendis ullam eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, unde suscipit nemo reprehenderit dignissimos voluptas quia sapiente corrupti fugiat, eius ad asperiores repudiandae eligendi distinctio odio numquam aliquam sunt quo! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam facere voluptatem ut eligendi, nihil incidunt quidem, sunt quisquam assumenda recusandae cumque? Porro sed itaque quas reprehenderit ex eligendi dolor quis.</p>
   <footer><div>BMV &copy; copyright.</div></footer>
   </body>
 </html>
