--- a/mysite.html
+++ b/mysite.html
@@ -5,7 +5,7 @@
    
     <style>
       body{
-        background-image: url(car.jpg);
+        background-image: url(nature.jpg);
         background-size: 1560px 840px;
         background-repeat: no-repeat;
       }
@@ -32,14 +32,14 @@ a:hover,a:active{
   background-color:black;
 }
 header{float: left;}
-footer{text-align:center;font-size: 30px;color:wheat;clear: left;}
+footer{text-align:center;font-size: 30px;color:whitesmoke;clear: left;background-color: black;width: 260px;margin-left:600px;padding-top: 5px;padding-bottom: 5px;}
 p{
   font-size: 20px;
-  color:wheat;
+  color:white;
   font-weight: bold;
   float: right;
-  width:50%;
-  background-color: gray;
+  width: 25%;
+  background-color:rgb(124, 167, 231);
   backface-visibility: visible;
   padding:20px;
   margin-top: 30px;
@@ -57,7 +57,11 @@ p{
       <div><img src="coursera.jpg" width="100px" height="80px"><a href="https://www.coursera.org/programs/vitap-on-coursera-8qunk">Coursera</a></div>
   </header>
   
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique doloribus quis molestias non. Consequatur ipsam optio incidunt saepe quae tempora laboriosam qui reiciendis nisi illum sunt cupiditate, perferendis ullam eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, unde suscipit nemo reprehenderit dignissimos voluptas quia sapiente corrupti fugiat, eius ad asperiores repudiandae eligendi distinctio odio numquam aliquam sunt quo! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam facere voluptatem ut eligendi, nihil incidunt quidem, sunt quisquam assumenda recusandae cumque? Porro sed itaque quas reprehenderit ex eligendi dolor quis.</p>
-  <footer><div>BMV &copy; copyright.</div></footer>
+  <p>VTOP is a website where VIT maintains its Academic processes giving its students flexible a framework.</p>
+  <p>Youtube is a social media application where people can upload videos regarding anything that entertains their viewers.</p>
+  <p>Prime Video is an online streaming app maintained by Amazon Services.</p>
+  <p>Coursera provides various online courses and also certifies students who complete the course.</p>
   </body>
+  <footer>BMV &copy; Copyright.</footer>
+</head>
 </html>
