--- a/mysite.html
+++ b/mysite.html
@@ -32,7 +32,7 @@ a:hover,a:active{
   background-color:black;
 }
 header{float: left;}
-footer{text-align:center;font-size: 30px;color:whitesmoke;clear: left;background-color: black;width: 260px;margin-left:600px;padding-top: 5px;padding-bottom: 5px;}
+footer{text-align:center;font-size: 30px;color:whitesmoke;clear: both;background-color: black;margin-left:600px;padding-top: 5px;padding-bottom: 5px;width: 280px;}
 p{
   font-size: 20px;
   color:white;
@@ -41,7 +41,7 @@ p{
   width: 25%;
   background-color:rgb(124, 167, 231);
   backface-visibility: visible;
-  padding:20px;
+  padding:15px;
   margin-top: 30px;
   margin-right:50px;
 }
