--- a/res.html
+++ b/res.html
@@ -34,7 +34,7 @@
         .lg12{width:100%;}
       }
 
-      @media(max-width: 1199px){
+      @media(min-width: 900px) and (max-width: 1199px){
         .ls1,.ls2,.ls3,.ls4,.ls5,.ls6,.ls7,.ls8,.ls9,.ls10,.ls11,.ls12{
           float: left;border: 2px solid black;
         }
