--- a/bootstrap_ex.html
+++ b/bootstrap_ex.html
@@ -1,15 +1,28 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title>bootstrap example</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Boostrap Starter Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    
+    <style>.row >div{background-color: burlywood;border: 2px solid black;}</style>
   </head>
-  <body>
-    <h1>Hello World!</h1>
-    <script src="jquery-3.5.0.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-
-  </body>
+<body>
+  <script src="jquery-3.5.0.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-3 col-md-4 col-sm-6">col1</div>
+      <div class="col-lg-3 col-md-4 col-sm-6">col2</div>
+      <div class="col-lg-3 col-md-4 col-sm-6">col3</div>
+      <div class="col-lg-3 col-md-4 col-sm-6">col3</div>
+      <div class="col-lg-3 col-md-4 col-sm-6">col3</div>
+      <div class="col-lg-3 col-md-4 col-sm-6">col3</div>
+      <div class="col-lg-3 col-md-4 col-sm-6">col3</div>
+      <div class="col-lg-3 col-md-4 col-sm-6">col3</div>
+      <div class="col-lg-3 col-md-4 col-sm-6">col3</div>
+    </div>
+  </div>
+</body>
 </html>
