--- a/my_res/index.html
+++ b/my_res/index.html
@@ -10,6 +10,8 @@
     
   </head>
 <body>
+  <h1 class="visible-xs">This text is shown only on an EXTRA SMALL screen.</h1>
+
   <nav class="navbar navbar-expand-lg navbar-light" id="nvbr">
     <a class="navbar-brand" href="index.html" style="color: rgb(247, 89, 31);">
       <img src="../logo.jpg" width="60" height="45" class="d-inline-block align-top" alt="">
