--- a/my_res/index.html
+++ b/my_res/index.html
@@ -71,11 +71,11 @@
     <div id="tiles" class="row">
       <div id="menutile" class="col-md-4 col-sm-6 col-xs-12">
         <div id="indiv1">
-        <a href="menu.html"><span>Menu</span></a>
+        <a href="menu.html"><div></div><span>Menu</span></a>
       </div></div>
       <div id="combo" class="col-md-4 col-sm-6 col-xs-12">
         <div id="indiv2">
-        <a href="combo.html"><span>Combo Offers</span></a>
+        <a href="combo.html"><div></div><span>Combo Offers</span></a>
       </div></div>
       <div id="map" class="col-md-4 col-sm-12 col-xs-12">
         <div id="indiv3">
