--- a/my_res/combo.html
+++ b/my_res/combo.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="combostyle.css">
   </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light" id="nvbr">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="nvbr">
     <a class="navbar-brand" href="index.html" style="color: rgb(247, 89, 31);">
       <img src="../logo.jpg" width="60" height="45" class="d-inline-block align-top" alt="">
       BMV's Restaurant   
@@ -22,13 +22,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="menu.html">Menu</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="combo.html">Combo Offers</a>
         </li>
       </ul>
