--- a/my_res/index.html
+++ b/my_res/index.html
@@ -12,7 +12,7 @@
 <body>
   
 
-  <nav class="navbar navbar-expand-lg navbar-light" id="nvbr">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="nvbr">
     <a class="navbar-brand" href="index.html" style="color: rgb(247, 89, 31);">
       <img src="../logo.jpg" width="60" height="45" class="d-inline-block align-top" alt="">
       BMV's Restaurant   
