--- a/my_res/combo.html
+++ b/my_res/combo.html
@@ -38,7 +38,7 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container" id="con">
     <div class="row">
     <div class="col-lg-6" id="item">
       <div id="item1">
