--- a/AgastyaCareers/index.html
+++ b/AgastyaCareers/index.html
@@ -119,15 +119,15 @@
     <div id="tiles" class="row container-fluid">
       <div id="menutile" class="col-md-4 col-sm-6 col-xs-12">
         <div id="indiv1">
-        <a href="menu.html"><div></div><span>Title</span></a>
+        <a href="#"><div></div><span>Title</span></a>
       </div></div>
       <div id="combo" class="col-md-4 col-sm-6 col-xs-12">
         <div id="indiv2">
-        <a href="combo.html"><div></div><span>Title</span></a>
+        <a href="#"><div></div><span>Title</span></a>
       </div></div>
       <div id="combo" class="col-md-4 col-sm-6 col-xs-12">
         <div id="indiv2">
-        <a href="combo.html"><div></div><span>Title</span></a>
+        <a href="#"><div></div><span>Title</span></a>
       </div></div>
     </div>
 
