--- a/AgastyaCareers/index.html
+++ b/AgastyaCareers/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="instyle.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="#">
         <img src="logo.jpg" width="50" height="50" alt="">
       </a>
