--- a/AgastyaCareers/index.html
+++ b/AgastyaCareers/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
+    
     <title>Agastya Careers</title>
     <link rel="icon" href="logo.jpg">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -144,7 +145,7 @@
 
     <script src="jquery-1.11.3.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    
+    <!--code by C. Bindhu Madhava Varma.-->
     <script src="../AgastyaCareers/javasc.js"></script>
   </body>
 </html> 
