--- a/Jittu/index.html
+++ b/Jittu/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="Background.jpeg">
 </head>
 <body>
   <div id="container">
-  <h2>Welcome to..</h2>
-  <h1 id="heading">Web Weather</h1>
-  <h2 id="link">To Know weather updates in your city click <a href="weatherApp.html" style="color: aliceblue;">here</a></h2>
-  <div id="features">
-    <h3 style="color: aliceblue;text-decoration: underline;">Features:</h3>
-    <div id="features">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit.Doloribus eos 
-      maxime sint facere suscipit eligendi libero iure tenetur voluptates minus ut, 
-      saepe esse odit velit illum beatae officia earum? Quos.Lorem, ipsum dolor sit amet consectetur adipisicing elit.Doloribus eos 
-      maxime sint facere suscipit eligendi libero iure tenetur voluptates minus ut, 
-      saepe esse odit velit illum beatae officia earum? Quos.Lorem, ipsum dolor sit amet consectetur adipisicing elit.Doloribus eos 
-      maxime sint facere suscipit eligendi libero iure tenetur voluptates minus ut, 
-      saepe esse odit velit illum beatae officia earum? Quos.
+    <div id="header">
+      <h1>Web Weather</h1>
     </div>
-  </div></div>
+    <div id="body">
+      <div>To Know weather updates in your city click <a href="weatherApp.html">here</a></div> 
+    </div>
+    <div id="features">
+      <h2 style="margin: 0px;text-decoration: underline;">Features</h2>
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eveniet,
+        porro nostrum veniam dignissimos laudantium? Officiis reprehenderit, ipsa corrupti 
+        error quasi, vero dolorem facilis ab tempora adipisci dicta quibusdam mollitia.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eveniet,
+        porro nostrum veniam dignissimos laudantium? Officiis reprehenderit, ipsa corrupti 
+        error quasi, vero dolorem facilis ab tempora adipisci dicta quibusdam mollitia.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eveniet,
+        porro nostrum veniam dignissimos laudantium? Officiis reprehenderit, ipsa corrupti 
+        error quasi, vero dolorem facilis ab tempora adipisci dicta quibusdam mollitia.
+      </div>
+    </div>
+  </div>
 </body>
 </html>
