--- a/agastyacareers/index.html
+++ b/agastyacareers/index.html
@@ -116,6 +116,21 @@
     <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
 </span>
 </nav>
+<!---->
+<nav class="navbar navbar-expand-md fixed-bottom  navbar-light bg-light ">
+  
+    <div class="navbar-text" style="margin: 0 auto;">
+      <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
+      <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a>
+      <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a>
+      <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
+    </div>
+    
+
+ 
+</nav>
+
+
 <div class="container-fluid" id="container0">
   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-ride="carousel" >
     <ol class="carousel-indicators">
