--- a/agastyacareers/index.html
+++ b/agastyacareers/index.html
@@ -117,7 +117,7 @@
 </span>
 </nav>
 <!---->
-<nav class="navbar navbar-expand-md fixed-bottom  navbar-light bg-light ">
+<nav class="navbar navbar-expand-md fixed-bottom  navbar-light bg-light d-md-none">
   
     <div class="navbar-text" style="margin: 0 auto;">
       <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
