--- a/agastyacareers/index.html
+++ b/agastyacareers/index.html
@@ -120,10 +120,10 @@
 <nav class="navbar navbar-expand-md fixed-bottom  navbar-light bg-light d-md-none">
   
     <div class="navbar-text" style="margin: 0 auto;">
-      <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
-      <a href="#" class="responsivecard fa fa-twitter" style="color: white;"></a>
-      <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a>
-      <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
+      <a href="#" class="responsivecard fa fa-facebook" style="color: white;margin-right:25px"></a>
+      <a href="#" class="responsivecard fa fa-twitter" style="color: white;margin-right:25px"></a>
+      <a href="#" class="responsivecard fa fa-linkedin" style="color: white;margin-right:25px"></a>
+      <a href="#" class="responsivecard fa fa-instagram" style="color: white;margin-right:25px"></a>
     </div>
     
 
