--- a/seds_website/index.html
+++ b/seds_website/index.html
@@ -87,13 +87,13 @@
             <div class="collapse navbar-collapse justify-content-center order-2" id="navbarSupportedContent">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Events</a>
+                  <a class="nav-link" href="events.html">Events</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Projects</a>
+                  <a class="nav-link" href="events.html">Projects</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Aboutus</a>
