--- a/lab2/index.html
+++ b/lab2/index.html
@@ -25,13 +25,13 @@
               <div class="collapse navbar-collapse justify-content-center order-2" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="events.html">Education</a>
+                    <a class="nav-link" href="#">Education</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="events.html">Internships</a>
+                    <a class="nav-link" href="#">Internships</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Trainings</a>
