--- a/lab2/index.html
+++ b/lab2/index.html
@@ -62,14 +62,14 @@
                     about new technologies and learning new programming languages. </p>
               </div>
           </div>
-          <footer class="new_footer_area bg_color">
+          <footer class="new_footer_area">
             <div class="new_footer_top">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 col-sm-12">
-                            <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                                <h3 class="f-title f_600 t_color f_size_18">Quick Links</h3>
-                                <ul class="list-unstyled f_list">
+                            <div class="about-widget">
+                                <h3 class="f-title">Quick Links</h3>
+                                <ul class="f_list">
                                     <li style="display: inline;"><a href="#"> Home </a> | </li>
                                     <li style="display: inline;"><a href="#"> Education </a> | </li>
                                     <li style="display: inline;"><a href="#"> Internships </a> | </li>
@@ -81,8 +81,8 @@
                         </div>
                         
                         <div class="col-lg-6 col-sm-12">
-                            <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
-                                <h3 class="f-title f_600 t_color f_size_18">Contanct me</h3>
+                            <div class="social-widget">
+                                <h3 class="f-title">Contanct me</h3>
                                 <div>
                                   <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
                                   <a href="#" class="responsivecard fa fa-google" style="color: white;"></a>
@@ -94,17 +94,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer_bg">
-                    <div class="footer_bg_one"></div>
-                    <div class="footer_bg_two"></div>
-                    <div class="footer_bg_three"></div>
-                </div>
             </div>
             <div class="footer_bottom">
                 <div class="container">
-                    <div class="row align-items-center">
+                    <div class="row">
                         <div class="col-lg-6 col-sm-7">
-                            <p class="mb-0 f_400">© C Bindhu Madhava Varma 2021 All rights reserved.</p>
+                            <p class="mb-0">© C Bindhu Madhava Varma 2021 All rights reserved.</p>
                         </div>
                     </div>
                 </div>
