--- a/lab2/index.html
+++ b/lab2/index.html
@@ -67,7 +67,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 col-sm-12">
-                            <div class="about-widget">
+                            <div>
                                 <h3 class="f-title">Quick Links</h3>
                                 <ul class="f_list">
                                     <li style="display: inline;"><a href="#"> Home </a> | </li>
@@ -81,7 +81,7 @@
                         </div>
                         
                         <div class="col-lg-6 col-sm-12">
-                            <div class="social-widget">
+                            <div>
                                 <h3 class="f-title">Contanct me</h3>
                                 <div>
                                   <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
@@ -99,7 +99,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 col-sm-7">
-                            <p class="mb-0">© C Bindhu Madhava Varma 2021 All rights reserved.</p>
+                            <p class="mb-0 f_400">© C Bindhu Madhava Varma 2021 All rights reserved.</p>
                         </div>
                     </div>
                 </div>
