--- a/lab2/education.html
+++ b/lab2/education.html
@@ -27,11 +27,11 @@
                   <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item active">
                     <a class="nav-link" href="#">Education</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Internships</a>
+                    <a class="nav-link" href="internships.html">Internships</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Trainings</a>
@@ -97,9 +97,9 @@
                             <div>
                                 <h3 class="f-title">Quick Links</h3>
                                 <ul class="f_list">
-                                    <li style="display: inline;"><a href="#"> Home </a> | </li>
+                                    <li style="display: inline;"><a href="index.html"> Home </a> | </li>
                                     <li style="display: inline;"><a href="#"> Education </a> | </li>
-                                    <li style="display: inline;"><a href="#"> Internships </a> | </li>
+                                    <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
                                     <li style="display: inline;"><a href="#"> Trainings </a> | </li>
                                     <li style="display: inline;"><a href="#"> Projects </a> | </li>
                                     <li style="display: inline;"><a href="#"> Skills </a></li>
