--- a/lab2/index.html
+++ b/lab2/index.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="internships.html">Internships</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Trainings</a>
+                    <a class="nav-link" href="trainings.html">Trainings</a>
                   </li>
                   <li class="nav-item ">
                     <a class="nav-link" href="#">Projects</a>
@@ -73,7 +73,7 @@
                                     <li style="display: inline;"><a href="#"> Home </a> | </li>
                                     <li style="display: inline;"><a href="education.html"> Education </a> | </li>
                                     <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
-                                    <li style="display: inline;"><a href="#"> Trainings </a> | </li>
+                                    <li style="display: inline;"><a href="trainings.html"> Trainings </a> | </li>
                                     <li style="display: inline;"><a href="#"> Projects </a> | </li>
                                     <li style="display: inline;"><a href="#"> Skills </a></li>
                                 </ul>
