--- a/lab2/education.html
+++ b/lab2/education.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <meta name="viewport" content="width=device-width, initial-scale=0.8">
+      <meta name="viewport" content="width=device-width,  initial-scale=0.7">
         <script src="jquery-1.11.3.min.js"></script>
         <script src="bootstrap.min.js"></script>
         <link rel="icon" href="images/me.jpg">
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="bootstrap.min.css">
         <link rel="stylesheet" href="index.css">
     </head>
-    <body>
+    <body >
         <div class="container-fluid" id="container0">
             <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
               <div class="d-flex w-50 order-0">
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="internships.html">Internships</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Trainings</a>
+                    <a class="nav-link" href="trainings.html">Trainings</a>
                   </li>
                   <li class="nav-item ">
                     <a class="nav-link" href="#">Projects</a>
@@ -53,7 +53,7 @@
             </span>
             </nav>
           </div>
-          <div class="contanier-fluid" id="container1" style="padding-top: 75px;">
+          <div class="contanier-fluid" id="container1" style="padding-top: 75px;min-height: 66vh;">
             <div class="heading">Education Details</div>
             <div style="padding: 3% 15% 3% 15%;">
                 <table class="table" style="color: white;text-align: left;"> 
@@ -100,7 +100,7 @@
                                     <li style="display: inline;"><a href="index.html"> Home </a> | </li>
                                     <li style="display: inline;"><a href="#"> Education </a> | </li>
                                     <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
-                                    <li style="display: inline;"><a href="#"> Trainings </a> | </li>
+                                    <li style="display: inline;"><a href="trainings.html"> Trainings </a> | </li>
                                     <li style="display: inline;"><a href="#"> Projects </a> | </li>
                                     <li style="display: inline;"><a href="#"> Skills </a></li>
                                 </ul>
