--- a/lab2_cssgrid/index.html
+++ b/lab2_cssgrid/index.html
@@ -13,7 +13,7 @@
                     <div>Prize Money: INR 1,10,000</div>
                     <div>Participants are supposed make softwares/applications that solves the requirements of an MNC</div>
                 </div>
-                <div style="margin: 0 auto;width: fit-content;"><a href="#" class="btn">Register</a></div>
+                <div style="margin: 0 auto;width: fit-content;"><a href="register.html" class="btn">Register</a></div>
             </div>
             <div class="responsivecard" id="tile1">
                 <div style="width: fit-content;margin: 0 auto;"><img src="wpc-main.jpg" height="100px" alt=""></div>
@@ -22,7 +22,7 @@
                     <div>Prize Money: INR 1,00,000</div>
                     <div>Challenge your minds by showcasing your problem-solving & competitive coding skills.</div>
                 </div>
-                <div style="margin: 0 auto;width: fit-content;"><a href="#" class="btn">Register</a></div>
+                <div style="margin: 0 auto;width: fit-content;"><a href="register.html" class="btn">Register</a></div>
             </div><div class="responsivecard" id="tile1">
                 <div style="width: fit-content;margin: 0 auto;"><img src="stock.jpg" height="100px" alt=""></div>
                 <div id="text">
@@ -30,7 +30,7 @@
                     <div>Prize Money: INR 50,000</div>
                     <div>Trade just like in the real world stock market. Participants have to make an online portfolio in the currency derivatives segment</div>
                 </div>
-                <div style="margin: 0 auto;width: fit-content;"><a href="#" class="btn">Register</a></div>
+                <div style="margin: 0 auto;width: fit-content;"><a href="register.html" class="btn">Register</a></div>
             </div><div class="responsivecard" id="tile1">
                 <div style="width: fit-content;margin: 0 auto;"><img src="gamedev.png" height="100px" alt=""></div>
                 <div id="text">
@@ -38,7 +38,7 @@
                     <div>Prize Money: INR 1,10,000</div>
                     <div>Apply your creative minds to develop a interactive, challenging yet compulsive android game.</div>
                 </div>
-                <div style="margin: 0 auto;width: fit-content;"><a href="#" class="btn">Register</a></div>
+                <div style="margin: 0 auto;width: fit-content;"><a href="register.html" class="btn">Register</a></div>
             </div><div class="responsivecard" id="tile1">
                 <div style="width: fit-content;margin: 0 auto;"><img src="smartui-min.jpg" height="100px" alt=""></div>
                 <div id="text">
@@ -46,7 +46,7 @@
                     <div>Prize Money: INR 1,10,000</div>
                     <div>Generate a Json file(output.json) from the screenshot of the wireframe which contains the details of various elements used in the webpage.</div>
                 </div>
-                <div style="margin: 0 auto;width: fit-content;"><a href="#" class="btn">Register</a></div>
+                <div style="margin: 0 auto;width: fit-content;"><a href="register.html" class="btn">Register</a></div>
             </div><div class="responsivecard" id="tile1">
                 <div style="width: fit-content;margin: 0 auto;"><img src="imc.jpg" height="100px" alt=""></div>
                 <div id="text">
@@ -54,7 +54,7 @@
                     <div>Prize Money: INR 70,000</div>
                     <div>Code an autonomous self-contained bot on ROS to be simulated on Gazebo, which can get to the centre of a maze in the shortest time</div>
                 </div>
-                <div style="margin: 0 auto;width: fit-content;"><a href="#" class="btn">Register</a></div>
+                <div style="margin: 0 auto;width: fit-content;"><a href="register.html" class="btn">Register</a></div>
             </div>
         </div>
     </body>
