--- a/profile/index.html
+++ b/profile/index.html
@@ -55,7 +55,7 @@
                 <img src="images/me.jpg" class="img-fluid hovering" height="250px" width="250px" style="border-radius:125px;margin-bottom: 15px;">
                 <h1 class="display-4">C Bindhu Madhava Varma</h1>
                 <p class="lead">Student at VIT_Vellore Institute of Technology, Amaravati.</p>
-                <p>I am currently a student at VIT AP pursuing my Bachelor's degree in CSE specialization in Data Analytics. I love programming and currently working as a software team maember at SEDS-Projects VIT. I like exploring
+                <p>I am currently a student at VIT AP pursuing my Bachelor's degree in CSE specialization in Data Analytics. I love programming and currently working as a software team member at SEDS-Projects VIT. I like exploring
                     about new technologies and learning new programming languages. </p>
               </div>
           </div>
