--- a/lab3_evaluation/trylist.html
+++ b/lab3_evaluation/trylist.html
@@ -22,6 +22,7 @@
                 width:48vw;
                 position: relative;
                 right: 0;
+                padding:30px;
             }
             .wrapper{
                 display: grid;
@@ -33,7 +34,7 @@
         <form action="#" name="editor">
             <div class="header">You can edit the code and try. <a href="#" class="btn" onclick="return(run())">Run</a></div>
             <div class="wrapper">
-            <textarea name="inputcode" id="" style="width: 50vw;height: 100vh;">
+            <textarea name="inputcode" id="" style="width: 50vw;height: 100vh;padding:30px;">
                 <!DOCTYPE html>
                 <html>
                 <body>
