--- a/seds_website/events.html
+++ b/seds_website/events.html
@@ -40,7 +40,7 @@
               <a class="nav-link" href="#">Gallery</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="index.html#Team_HEAD">Team</a>
+              <a class="nav-link" href="team.html">Team</a>
             </li>
           </ul>
         </div>
