--- a/seds_website/index.html
+++ b/seds_website/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="container-fluid row containerx" id="#container2" style="margin: 0 auto;background-color:#15173d;">
           
-          <div class="about" style="width: 100% ;background-color:#15173d;padding: 50px 8vw 50px 8vw;text-align: center;color:white;">
+          <div class="about" style="width: 100% ;background-image:url(images/abtbackground.jpg);background-position: center;background-size: cover;background-repeat: no-repeat;padding: 50px 8vw 50px 8vw;text-align: center;color:white;">
            <h1 style="color: white;">About us</h1>
            <p style="font-size: 18px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, provident officia asperiores 
             distinctio quos sed omnis et magnam eligendi corporis accusamus corrupti illum at autem ratione, ipsa necessitatibus similique 
