--- a/seds_website/index.html
+++ b/seds_website/index.html
@@ -169,15 +169,15 @@
           
     </div>
      <div class="row">
-        <div class="col-md-4 col-sm-6" id="teamlink"><div id="corescroll" class="twelve Subheadingdiv">
-            <a href="team.html#coreanchor" ><h1>Core Team</h1></a>
-        </div></div>
-        <div class="col-md-4 col-sm-6" id="teamlink"><div id="corescroll" class="twelve Subheadingdiv">
-            <a href="team.html#projectanchor" ><h1>Project Team</h1></a>
-        </div></div>
-        <div class="col-md-4 col-sm-6" id="teamlink"><div id="corescroll" class="twelve Subheadingdiv">
-            <a href="team.html#outreachanchor" ><h1>Outreach Team</h1></a>
-        </div></div>
+        <div class="col-md-4 col-sm-6" id="teamlink"><a href="team.html#coreanchor" ><div id="corescroll" class="twelve Subheadingdiv">
+            <h1>Core Team</h1>
+        </div></a></div>
+        <div class="col-md-4 col-sm-6" id="teamlink"><a href="team.html#projectanchor" ><div id="corescroll" class="twelve Subheadingdiv">
+            <h1>Project Team</h1>
+        </div></a></div>
+        <div class="col-md-4 col-sm-12" id="teamlink"> <a href="team.html#outreachanchor" ><div id="corescroll" class="twelve Subheadingdiv">
+           <h1>Outreach Team</h1>
+        </div></a></div>
       </div>
      
 
