--- a/seds_website/events.html
+++ b/seds_website/events.html
@@ -2,11 +2,13 @@
 <html>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=0.6">
+        <title>SEDS-VITAP</title>
         <script src="jquery-1.11.3.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="main.css">
+        <link rel="icon" href="images/logo (2).png">
         <link rel="stylesheet" href="events.css">
     </head>
    
