--- a/seds_website/index.html
+++ b/seds_website/index.html
@@ -2,7 +2,11 @@
 <html>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=0.8">
+      <title>SEDS-VITAP</title>
+      <meta name="description" content="lorem ipsum dolor sit">
+      <link rel="canonical" href="https:/bindhumadhavavarma.github.io/seds-website/index.html">
         <script src="jquery-1.11.3.min.js"></script>
+        <link rel="icon" href="images/logo (2).png">
         <script src="js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
