added gallery page

--- a/seds_website/team.html
+++ b/seds_website/team.html
@@ -44,7 +44,7 @@
                 <a class="nav-link"  href="index.html#homw">Aboutus</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="#">Gallery</a>
+                <a class="nav-link" href="gallery.html">Gallery</a>
               </li>
               <li class="nav-item " id="scteam">
                 <a class="nav-link" href="#">Team</a>
