--- a/seds_website/events.html
+++ b/seds_website/events.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="index.html#home">Aboutus</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="#">Gallery</a>
+              <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="team.html">Team</a>
