--- a/seds_website/events.html
+++ b/seds_website/events.html
@@ -5,13 +5,14 @@
         <title>SEDS-VITAP</title>
         <script src="jquery-1.11.3.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="main.css">
         <link rel="icon" href="images/logo (2).png">
         <link rel="stylesheet" href="events.css">
     </head>
-   
+    <video src="images/backvideo.mp4" autoplay loop playsinline muted preload></video>
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="padding-top: 0;padding-bottom: 0;">
         <div class="d-flex w-50 order-0">
@@ -55,25 +56,25 @@
       </span>
       </nav>
       </div>
-    <div class="hovering hovering-left" style="margin-top: 75px;color: white;padding-top: 300px;">
+    <div class="hovering hovering-left" style="margin-top: 75px;color: white;padding-top: 300px;z-index: 1;">
         <img src="images/sat1.png" alt="" height="175px" width="175px;">
     </div>
-    <div class="hovering hovering-right" style="margin-top: 75px;color: white;padding-top: 650px;">
+    <div class="hovering hovering-right" style="margin-top: 75px;color: white;padding-top: 650px;z-index: 1;">
         <img src="images/roc1.png" alt="" height="165px" width="165px;">
     </div>
-    <div class="hovering hovering-left" style="margin-top: 75px;color: white;padding-top: 1050px;">
+    <div class="hovering hovering-left" style="margin-top: 75px;color: white;padding-top: 1050px;z-index: 1;">
         <img src="images/sat2.png" alt="" height="165px" width="165px;">
     </div>
-    <div class="hovering hovering-right" style="margin-top: 75px;color: white;padding-top: 1400px;">
+    <div class="hovering hovering-right" style="margin-top: 75px;color: white;padding-top: 1400px;z-index: 1;">
         <img src="images/roc2.png" alt="" height="165px" width="165px;">
     </div>
-    <div class="hovering hovering-left" style="margin-top: 75px;color: white;padding-top: 1800px;">
+    <div class="hovering hovering-left" style="margin-top: 75px;color: white;padding-top: 1700px;z-index: 1;">
         <img src="images/sat3.png" alt="" height="165px" width="165px;">
     </div>
-    <body>
-            
-            <div class="content">
-                <h1>
+    <body >
+      
+            <div class="content" style="background: rgba(0, 0, 0, 0.452);position: relative;min-width: 100vw;">
+              <h1 style="text-align: center;padding-top: 20px;">
                   Events and Projects
                 </h1>
                 <ul class="timeline">
