--- a/seds_website/gallery.html
+++ b/seds_website/gallery.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <video src="images/backvideo.mp4" autoplay loop playsinline muted ></video>
+    <video src="images/backvideo.mp4" autoplay loop playsinline muted preload></video>
     <!-- ----------------------------------------------------------------------- -->
     <!-- ----------------------------------------------------------------------- -->
     <!-- Navigation Bar -->
