--- a/seds_website/index.html
+++ b/seds_website/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
       <div style="min-height: 100vh;padding-top: 15vh;">
-        <video src="images/backvideo.mp4" autoplay loop playsinline muted ></video>
+        <video src="images/backvideo.mp4" autoplay loop playsinline muted preload></video>
         <header class="viewport-header">
           <div>
               <img id="Main_logo" src="images/logo (2).png" alt="SEDS_LOGO">
@@ -79,7 +79,7 @@
         </div>
         <div class="container-fluid row containerx" id="#container2" style="margin: 0 auto;background-color:#15173d;">
           
-          <div class="about" style="width: 100% ;background-image:url(images/aboutback.jpg);background-position: center;background-size: cover;background-repeat: no-repeat;padding: 50px 8vw 50px 8vw;text-align: center;color:white;">
+          <div class="about" style="width: 100% ;background:rgba(0, 0, 0, 0.5);background-position: center;background-size: cover;background-repeat: no-repeat;padding: 50px 8vw 50px 8vw;text-align: center;color:white;">
            <h1 style="color: white;">About us</h1>
            <p style="font-size: 18px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, provident officia asperiores 
             distinctio quos sed omnis et magnam eligendi corporis accusamus corrupti illum at autem ratione, ipsa necessitatibus similique 
@@ -187,11 +187,11 @@
      
 
       <div class="gallery">
-       <div class="heading"><h1>Gallery</h1></div> 
+       <div style="text-align: center;"><h1>Gallery</h1></div> 
        <section class="mainrow_1">
         <div class="row justify-content-center" style="margin: 0;">
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 example-2 card">
-                <div class="wrapper">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 example-2 card" >
+                <div class="wrapper" style="border-radius: 25px;">
                     <div class="header">
                         <div class="date">
                             <span class="day">7</span>
@@ -211,7 +211,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 example-2 card">
-                <div class="wrapper wrapper2">
+                <div class="wrapper wrapper2" style="border-radius: 25px;">
                     <div class="header">
                         <div class="date dateeven">
                             <span class="day">25</span>
@@ -232,7 +232,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 example-2 card">
-                <div class="wrapper wrapper3">
+                <div class="wrapper wrapper3" style="border-radius: 25px;">
                     <div class="header">
                         <div class="date">
                             <span class="day">21</span>
