fixed team.html bug

--- a/seds_website/team.html
+++ b/seds_website/team.html
@@ -96,13 +96,13 @@
     </section>
     <script>
         function core(){
-            document.getElementById("placeholder").innerHTML='<iframe id="idIframe" onload="iframeLoaded()"  src="coreteam.html" height="100%" width="100%" style="border:none"></iframe>';
+            document.getElementById("placeholder").innerHTML='<iframe id="idIframe" onload="iframeLoaded()" scrolling="no" src="coreteam.html" height="100%" width="100%" style="border:none"></iframe>';
         }
         function project(){
-            document.getElementById("placeholder").innerHTML='<iframe id="idIframe" onload="iframeLoaded()"  src="projectteam.html" height="100%" width="100%" style="border:none"></iframe>';
+            document.getElementById("placeholder").innerHTML='<iframe id="idIframe" onload="iframeLoaded()" scrolling="no" src="projectteam.html" height="100%" width="100%" style="border:none"></iframe>';
         }
         function outreach(){
-            document.getElementById("placeholder").innerHTML='<iframe id="idIframe" onload="iframeLoaded()"  src="outteam.html" height="100%" width="100%" style="border:none"></iframe>';
+            document.getElementById("placeholder").innerHTML='<iframe id="idIframe" onload="iframeLoaded()" scrolling="no" src="outteam.html" height="100%" width="100%" style="border:none"></iframe>';
         }
     </script>
     <div class="row" style="margin: 0;">
@@ -133,7 +133,7 @@
         
 
 
-<iframe id="idIframe" onload="iframeLoaded()"  src="coreteam.html" height="100%" width="100%" style="border:none"></iframe>
+<iframe id="idIframe" onload="iframeLoaded()"  src="coreteam.html" scrolling="no" height="100%" width="100%" style="border:none"></iframe>
         <!--<iframe class="myIframe" style="width: 100vw;border: none;" src="coreteam.html"></iframe>-->
       </div>
 
