--- a/seds_website/test.html
+++ b/seds_website/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+		<link rel="stylesheet" href="main.css">
         <style>
             * {
   box-sizing: border-box;
@@ -38,8 +39,9 @@ body {
 .container .box:after {
 	background-image: linear-gradient(
 											45deg,
-											#ffbc00,
-											#ff0058
+											#025396,
+											#17153d
+											
 										);
 	content: '';
 	height: 100%;
@@ -53,8 +55,8 @@ body {
 .container .box:nth-child(2):after {
 	background-image: linear-gradient(
 											315deg,
-											#03a9f4,
-											#ff0058
+											#17153d,
+											#025396
 										);
 }
 
@@ -62,8 +64,8 @@ body {
 .container .box:nth-child(3):after {
 	background-image: linear-gradient(
 											315deg,
-											#4dff03,
-											#00d0ff
+											#17153d,
+											#025396
 										);
 }
 
@@ -139,6 +141,7 @@ body {
         </style>
     </head>
     <body>
+		<video src="images/backvideo.mp4" autoplay loop playsinline muted preload></video>
         <div class="container">
             <div class="box">
                 <span></span>
