--- a/seds_website/index.html
+++ b/seds_website/index.html
@@ -144,7 +144,7 @@
             
             <div class="tl-year" style="position: relative;top: 50%; padding-top: 0;border: none;">
                 <div class="container" id="btncontainer" style="padding: 0;">
-                    <a href="team.html"><div class="box" style="width: fit-content;padding:0 15px 0 15px;">
+                    <a href="events.html"><div class="box" style="width: fit-content;padding:0 15px 0 15px;">
                         <span></span> 
                         
                         <div class="content" style="padding-left: 0;padding-right: 0;">
