--- a/lab4/index.html
+++ b/lab4/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>lab4</title>
         <link rel="stylesheet" href="main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=0.6">
     </head>
     <body onload="return(initialize())">
         <script>
@@ -61,7 +62,7 @@
             <button onclick="return(showcup())">Cup Cakes</button>
             <button onclick="return(showpiz())">Pizzas</button>
         </div>
-        <div id="image_container">
+        <div id="image_container" style="text-align: center;">
 
         </div>
     </body>
