--- a/seds_website/index.html
+++ b/seds_website/index.html
@@ -31,7 +31,7 @@
   
           </div>
           <div id="Main_text">
-              <h1 id="SEDS_Name">SEDS VIT-AP</h1>
+              <h1 id="SEDS_Name">SEDS VIT-&nbsp;AP</h1>
               <h5 id="Seds_fullform">( Students for the Exploration and Development of Space )</h5>
           </div>
           
