--- a/seds_website/events.html
+++ b/seds_website/events.html
@@ -13,6 +13,10 @@
         <link rel="stylesheet" href="events.css">
         <script src="https://kit.fontawesome.com/84b8764c65.js"></script>
     </head>
+    <script>$(window).load(function() {
+      // Animate loader off screen
+      $(".se-pre-con").fadeOut("slow");;
+    });</script>
     <video src="images/backvideo.mp4" autoplay loop playsinline muted preload></video>
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="padding-top: 0;padding-bottom: 0;">
@@ -32,19 +36,20 @@
             <li class="nav-item ">
               <a class="nav-link" href="index.html">Home</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#home">About&nbsp;Us</a>
+            </li>
             <li class="nav-item active">
               <a class="nav-link" href="events.html">Events</a>
             </li>
             
-            <li class="nav-item">
-              <a class="nav-link" href="index.html#home">Aboutus</a>
+            <li class="nav-item ">
+              <a class="nav-link" href="team.html">Team</a>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="team.html">Team</a>
-            </li>
+           
           </ul>
         </div>
         <span class="navbar-text small  mt-1 w-50 text-right order-1 order-md-last d-none d-sm-none d-md-none d-lg-block">
@@ -177,4 +182,5 @@ function callbackFunc() {
               </script>
 
     </body>
+    <div class="se-pre-con"></div>
 </html>
