--- a/seds_website/projectteam.html
+++ b/seds_website/projectteam.html
@@ -119,9 +119,9 @@
                     <h4 class="title">Software Team</h4>
                 </div>
                 <ul class="social">
-                  <a href="https://www.facebook.com/bindumadhava.varma/" class="responsivecard fa fa-facebook" style="color: white;"></a>
-                  <a href="https://twitter.com/CBindhuMadhava2" class="responsivecard fa fa-twitter" style="color: white;"></a>
-                  <a href="https://www.linkedin.com/in/bindhu-madhav-varma-c-58140b1aa/" class="responsivecard fa fa-linkedin" style="color: white;"></a>
+                  <a target="_blank" href="https://www.facebook.com/bindumadhava.varma/" class="responsivecard fa fa-facebook" style="color: white;"></a>
+                  <a target="_blank" href="https://twitter.com/CBindhuMadhava2" class="responsivecard fa fa-twitter" style="color: white;"></a>
+                  <a target="_blank" href="https://www.linkedin.com/in/bindhu-madhav-varma-c-58140b1aa/" class="responsivecard fa fa-linkedin" style="color: white;"></a>
                   
                   <a target="_blank" href="https://github.com/BINDHUMADHAVAVARMA" class="responsivecard fa fa-github" style="color: white;"></a></ul>
             </div>
