--- a/seds_website/gallery.html
+++ b/seds_website/gallery.html
@@ -57,7 +57,7 @@
                     <a class="nav-link" href="team.html">Team</a>
                   </li>
                   
-                  <li class="nav-item ">
+                  <li class="nav-item active">
                     <a class="nav-link" href="#">Gallery</a>
                   </li>
                   
