--- a/seds_website/team.html
+++ b/seds_website/team.html
@@ -56,7 +56,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="events.html">Events</a>
               </li>
-              <li class="nav-item " id="scteam">
+              <li class="nav-item active" id="scteam">
                 <a class="nav-link" href="#">Team</a>
               </li>
              
