--- a/seds_website/events.html
+++ b/seds_website/events.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <meta name="viewport" content="width=device-width, initial-scale=0.6">
+      <meta name="viewport" content="width=device-width, initial-scale=0.8">
         <title>SEDS-VITAP</title>
         <script src="jquery-1.11.3.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="padding-top: 0;padding-bottom: 0;">
         <div class="d-flex w-50 order-0">
           
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="images/logo (1).png" height="70px" alt="" style="border-radius: 25px;">
         </a>
          
