--- a/seds_website/events.html
+++ b/seds_website/events.html
@@ -61,24 +61,23 @@
       </span>
       </nav>
       </div>
-    <div class="hovering hovering-left" style="margin-top: 75px;color: white;padding-top: 350px;z-index: 1;">
+    <div class="hovering hovering-left" style="margin-top: 75px;color: white;padding-top: 200px;z-index: 1;">
         <img src="images/sat1.png" alt="" height="175px" width="175px;">
     </div>
-    <div class="hovering hovering-right" style="margin-top: 75px;color: white;padding-top: 1050px;z-index: 1;">
+    <div class="hovering hovering-right" style="margin-top: 75px;color: white;padding-top: 800px;z-index: 1;">
         <img src="images/roc1.png" alt="" height="165px" width="165px;">
     </div>
-    <div class="hovering hovering-left" style="margin-top: 75px;color: white;padding-top: 1750px;z-index: 1;">
+    <div class="hovering hovering-left" style="margin-top: 75px;color: white;padding-top: 1250px;z-index: 1;">
         <img src="images/sat2.png" alt="" height="165px" width="165px;">
     </div>
-    <div class=" d-md-none hovering hovering-right" style="margin-top: 75px;color: white;padding-top: 2400px;z-index: 1;">
+    <div class=" d-md-none hovering hovering-right" style="margin-top: 75px;color: white;padding-top: 1750px;z-index: 1;">
         <img src="images/roc2.png" alt="" height="165px" width="165px;">
     </div>
-    <div class="d-md-none hovering hovering-left" style="margin-top: 75px;color: white;padding-top: 2900px;z-index: 1;">
-        <img src="images/sat3.png" alt="" height="165px" width="165px;">
-    </div>
-    <body >
-      
-            <div class="content" style="background: rgba(0, 0, 0, 0.452);position: relative;min-width: 100vw;">
+    
+    <body style="background: rgba(0, 0, 0, 0.452);">
+        <style>@media(max-width:560px){
+          .content{transform:scale(0.73,0.73);position: absolute;top: -450px;margin-bottom: -926px;overflow-y: hidden;}}</style>
+            <div class="content" style="background: rgba(0, 0, 0, 0.452);position: relative;min-width: 140vw;">
               <h1 style="text-align: center;padding-top: 20px;">
                   Events and Projects
                 </h1>
